--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "boilerplate",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"dependencies": {
 		"body-parser": "^1.15.2",
@@ -13,8 +14,11 @@
 		"cors": "^2.8.1",
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
-		"mocha": "^3.2.0",
-		"zombie": "^5.0.5"
+		"mocha": "^10.4.0",
+		"zombie": "^6.1.4",
+		"mongoose": "8.3.5",
+		"mongodb": "6.6.2",
+		"nodemon": "3.1.0"
 	},
 	"repository": {
 		"type": "git",
